Beaucoup de changements sur les fichiers html, alignement correct sur les divs et refonte sur l'arbo (plus conventionnel)

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -94,7 +94,7 @@
     font-weight: bold;
 }
 
-.footer{
+footer{
     background-color: rgba(0, 0, 0, 0.664);
     height: 50px;
     width: 100%;
